deploy: c85e3a6b47a91c360234d1b1997eaa1d9dbe112e

--- a/dev/tutorials/l_master.ipynb
+++ b/dev/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d45d0010",
+   "id": "e7eb59ce",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e3d9cf4",
+   "id": "a58b0e41",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4855295",
+   "id": "74e4cc3c",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fccd9be",
+   "id": "6d79c656",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94d31c21",
+   "id": "f66c1d78",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97d44256",
+   "id": "bcf03e2d",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "02b6119a",
+   "id": "eed72ed5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T17:38:03.511610Z",
-     "iopub.status.busy": "2025-09-23T17:38:03.511440Z",
-     "iopub.status.idle": "2025-09-23T17:38:06.930051Z",
-     "shell.execute_reply": "2025-09-23T17:38:06.929439Z"
+     "iopub.execute_input": "2025-09-23T20:33:20.216212Z",
+     "iopub.status.busy": "2025-09-23T20:33:20.216028Z",
+     "iopub.status.idle": "2025-09-23T20:33:23.212901Z",
+     "shell.execute_reply": "2025-09-23T20:33:23.212346Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c494c6b3",
+   "id": "3b5c5d28",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a87ad602",
+   "id": "0501770b",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0f63731",
+   "id": "1c58533d",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33df5f05",
+   "id": "16d7bd25",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e1fa627",
+   "id": "65e4626b",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7bcc140",
+   "id": "3cba0a99",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "348ac68a",
+   "id": "e05cb4db",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a98e079b",
+   "id": "71ddf8bd",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "18289dab",
+   "id": "e6b63427",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T17:38:06.932228Z",
-     "iopub.status.busy": "2025-09-23T17:38:06.931917Z",
-     "iopub.status.idle": "2025-09-23T17:38:09.327103Z",
-     "shell.execute_reply": "2025-09-23T17:38:09.326513Z"
+     "iopub.execute_input": "2025-09-23T20:33:23.215004Z",
+     "iopub.status.busy": "2025-09-23T20:33:23.214741Z",
+     "iopub.status.idle": "2025-09-23T20:33:25.441843Z",
+     "shell.execute_reply": "2025-09-23T20:33:25.441263Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cce860e3",
+   "id": "71581565",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "20779f3f",
+   "id": "d88bec36",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T17:38:09.328989Z",
-     "iopub.status.busy": "2025-09-23T17:38:09.328799Z",
-     "iopub.status.idle": "2025-09-23T17:38:09.332697Z",
-     "shell.execute_reply": "2025-09-23T17:38:09.331973Z"
+     "iopub.execute_input": "2025-09-23T20:33:25.443696Z",
+     "iopub.status.busy": "2025-09-23T20:33:25.443480Z",
+     "iopub.status.idle": "2025-09-23T20:33:25.446912Z",
+     "shell.execute_reply": "2025-09-23T20:33:25.446404Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce0a3e45",
+   "id": "a7dde698",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c17111a",
+   "id": "0b854b9a",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bb21870",
+   "id": "5c49bda7",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eb05304",
+   "id": "00d84858",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "23977c98",
+   "id": "266fe31c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T17:38:09.334535Z",
-     "iopub.status.busy": "2025-09-23T17:38:09.334349Z",
-     "iopub.status.idle": "2025-09-23T17:38:09.381897Z",
-     "shell.execute_reply": "2025-09-23T17:38:09.381361Z"
+     "iopub.execute_input": "2025-09-23T20:33:25.448533Z",
+     "iopub.status.busy": "2025-09-23T20:33:25.448352Z",
+     "iopub.status.idle": "2025-09-23T20:33:25.494035Z",
+     "shell.execute_reply": "2025-09-23T20:33:25.493453Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce1e4c7d",
+   "id": "2831e3d6",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0ab0c109",
+   "id": "df763ef8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T17:38:09.383838Z",
-     "iopub.status.busy": "2025-09-23T17:38:09.383649Z",
-     "iopub.status.idle": "2025-09-23T17:38:09.455464Z",
-     "shell.execute_reply": "2025-09-23T17:38:09.454805Z"
+     "iopub.execute_input": "2025-09-23T20:33:25.495756Z",
+     "iopub.status.busy": "2025-09-23T20:33:25.495575Z",
+     "iopub.status.idle": "2025-09-23T20:33:25.567942Z",
+     "shell.execute_reply": "2025-09-23T20:33:25.567409Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09dd893a",
+   "id": "c7818547",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26ee41ea",
+   "id": "e2fdb60e",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f89969ad",
+   "id": "57882e95",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T17:38:09.457399Z",
-     "iopub.status.busy": "2025-09-23T17:38:09.457201Z",
-     "iopub.status.idle": "2025-09-23T17:38:09.486197Z",
-     "shell.execute_reply": "2025-09-23T17:38:09.485650Z"
+     "iopub.execute_input": "2025-09-23T20:33:25.569770Z",
+     "iopub.status.busy": "2025-09-23T20:33:25.569586Z",
+     "iopub.status.idle": "2025-09-23T20:33:25.600135Z",
+     "shell.execute_reply": "2025-09-23T20:33:25.599630Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18254c29",
+   "id": "e6989d07",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2757838f",
+   "id": "705ea6f5",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe02fb85",
+   "id": "b651b00b",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e084fb8",
+   "id": "d70b6696",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6b4f5ea",
+   "id": "77283f5c",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6380c879",
+   "id": "9c0d0714",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T17:38:09.488137Z",
-     "iopub.status.busy": "2025-09-23T17:38:09.487927Z",
-     "iopub.status.idle": "2025-09-23T17:38:09.493419Z",
-     "shell.execute_reply": "2025-09-23T17:38:09.492737Z"
+     "iopub.execute_input": "2025-09-23T20:33:25.601975Z",
+     "iopub.status.busy": "2025-09-23T20:33:25.601803Z",
+     "iopub.status.idle": "2025-09-23T20:33:25.606103Z",
+     "shell.execute_reply": "2025-09-23T20:33:25.605535Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aad2055d",
+   "id": "4b9cbfc3",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ed368e4b",
+   "id": "c64844d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T17:38:09.495103Z",
-     "iopub.status.busy": "2025-09-23T17:38:09.494899Z",
-     "iopub.status.idle": "2025-09-23T17:38:09.497830Z",
-     "shell.execute_reply": "2025-09-23T17:38:09.497255Z"
+     "iopub.execute_input": "2025-09-23T20:33:25.607772Z",
+     "iopub.status.busy": "2025-09-23T20:33:25.607596Z",
+     "iopub.status.idle": "2025-09-23T20:33:25.610378Z",
+     "shell.execute_reply": "2025-09-23T20:33:25.609808Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8b6624d",
+   "id": "a1d7d118",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "81bd455a",
+   "id": "844b95a6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T17:38:09.499524Z",
-     "iopub.status.busy": "2025-09-23T17:38:09.499357Z",
-     "iopub.status.idle": "2025-09-23T17:38:12.187261Z",
-     "shell.execute_reply": "2025-09-23T17:38:12.186609Z"
+     "iopub.execute_input": "2025-09-23T20:33:25.611928Z",
+     "iopub.status.busy": "2025-09-23T20:33:25.611757Z",
+     "iopub.status.idle": "2025-09-23T20:33:28.196931Z",
+     "shell.execute_reply": "2025-09-23T20:33:28.196358Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "109c5c51",
+   "id": "638b452f",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c0fee81",
+   "id": "b0960c18",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "290723f5",
+   "id": "a7696cc7",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7408bf23",
+   "id": "e7f78fc9",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fc7ee8b5",
+   "id": "efc0f8bf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T17:38:12.189426Z",
-     "iopub.status.busy": "2025-09-23T17:38:12.189213Z",
-     "iopub.status.idle": "2025-09-23T17:38:12.193039Z",
-     "shell.execute_reply": "2025-09-23T17:38:12.192329Z"
+     "iopub.execute_input": "2025-09-23T20:33:28.198779Z",
+     "iopub.status.busy": "2025-09-23T20:33:28.198606Z",
+     "iopub.status.idle": "2025-09-23T20:33:28.202145Z",
+     "shell.execute_reply": "2025-09-23T20:33:28.201549Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f4974ac2e80>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fed42a4a980>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "163f2561",
+   "id": "67392147",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56f0ff34",
+   "id": "48cb5f0e",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f178c18a",
+   "id": "ef9a99f1",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d779ba83",
+   "id": "24469ec7",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "516a498e",
+   "id": "9520be39",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T17:38:12.194866Z",
-     "iopub.status.busy": "2025-09-23T17:38:12.194683Z",
-     "iopub.status.idle": "2025-09-23T17:38:12.197920Z",
-     "shell.execute_reply": "2025-09-23T17:38:12.197272Z"
+     "iopub.execute_input": "2025-09-23T20:33:28.203871Z",
+     "iopub.status.busy": "2025-09-23T20:33:28.203705Z",
+     "iopub.status.idle": "2025-09-23T20:33:28.206449Z",
+     "shell.execute_reply": "2025-09-23T20:33:28.205973Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0ce1f03c",
+   "id": "f1facdbc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T17:38:12.199629Z",
-     "iopub.status.busy": "2025-09-23T17:38:12.199444Z",
-     "iopub.status.idle": "2025-09-23T17:38:13.280057Z",
-     "shell.execute_reply": "2025-09-23T17:38:13.279430Z"
+     "iopub.execute_input": "2025-09-23T20:33:28.207946Z",
+     "iopub.status.busy": "2025-09-23T20:33:28.207767Z",
+     "iopub.status.idle": "2025-09-23T20:33:29.268937Z",
+     "shell.execute_reply": "2025-09-23T20:33:29.268361Z"
     }
    },
    "outputs": [
