deploy: 9a85c5f88bbd734b6b142d53febf91f8094d6991

--- a/dev/tutorials/l_master.ipynb
+++ b/dev/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f2e650c9",
+   "id": "c78b2ed4",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "231b233c",
+   "id": "46479c18",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98a6684d",
+   "id": "b67d8630",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe149f41",
+   "id": "a718a74d",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "680d2f05",
+   "id": "67062383",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad0b24b7",
+   "id": "8a1a4073",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6670b6dc",
+   "id": "7d684cee",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T12:27:35.773272Z",
-     "iopub.status.busy": "2025-09-24T12:27:35.773093Z",
-     "iopub.status.idle": "2025-09-24T12:27:38.997351Z",
-     "shell.execute_reply": "2025-09-24T12:27:38.996791Z"
+     "iopub.execute_input": "2025-09-24T16:31:00.367766Z",
+     "iopub.status.busy": "2025-09-24T16:31:00.367498Z",
+     "iopub.status.idle": "2025-09-24T16:31:03.426380Z",
+     "shell.execute_reply": "2025-09-24T16:31:03.425847Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9defdc81",
+   "id": "3ad58dfd",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "255166b9",
+   "id": "e84ccd43",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3561a463",
+   "id": "57cc6e15",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "915cb92f",
+   "id": "34978eca",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a7316ab",
+   "id": "11ad7c8f",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0116495",
+   "id": "03491d2f",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0a0a478",
+   "id": "310b3f99",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c5888d5",
+   "id": "3a21a8d1",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b6c5365c",
+   "id": "6d7bfc7b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T12:27:38.999502Z",
-     "iopub.status.busy": "2025-09-24T12:27:38.999242Z",
-     "iopub.status.idle": "2025-09-24T12:27:41.472756Z",
-     "shell.execute_reply": "2025-09-24T12:27:41.472071Z"
+     "iopub.execute_input": "2025-09-24T16:31:03.428487Z",
+     "iopub.status.busy": "2025-09-24T16:31:03.428224Z",
+     "iopub.status.idle": "2025-09-24T16:31:05.993136Z",
+     "shell.execute_reply": "2025-09-24T16:31:05.992536Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73eba754",
+   "id": "90119674",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "916ac1a1",
+   "id": "c18364d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T12:27:41.474723Z",
-     "iopub.status.busy": "2025-09-24T12:27:41.474490Z",
-     "iopub.status.idle": "2025-09-24T12:27:41.477837Z",
-     "shell.execute_reply": "2025-09-24T12:27:41.477222Z"
+     "iopub.execute_input": "2025-09-24T16:31:05.995032Z",
+     "iopub.status.busy": "2025-09-24T16:31:05.994836Z",
+     "iopub.status.idle": "2025-09-24T16:31:05.998599Z",
+     "shell.execute_reply": "2025-09-24T16:31:05.998110Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9d6b0fa",
+   "id": "fbac7c4a",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcf7236b",
+   "id": "e5395f6e",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c750621d",
+   "id": "24fa38e7",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e11ace49",
+   "id": "9391bb52",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ac2c4bad",
+   "id": "a531e4a3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T12:27:41.479733Z",
-     "iopub.status.busy": "2025-09-24T12:27:41.479536Z",
-     "iopub.status.idle": "2025-09-24T12:27:41.527472Z",
-     "shell.execute_reply": "2025-09-24T12:27:41.526863Z"
+     "iopub.execute_input": "2025-09-24T16:31:06.000433Z",
+     "iopub.status.busy": "2025-09-24T16:31:06.000256Z",
+     "iopub.status.idle": "2025-09-24T16:31:06.048195Z",
+     "shell.execute_reply": "2025-09-24T16:31:06.047654Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d6ecbc4",
+   "id": "48a8dddb",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f98b80d9",
+   "id": "e7268b8d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T12:27:41.529346Z",
-     "iopub.status.busy": "2025-09-24T12:27:41.529151Z",
-     "iopub.status.idle": "2025-09-24T12:27:41.605356Z",
-     "shell.execute_reply": "2025-09-24T12:27:41.604795Z"
+     "iopub.execute_input": "2025-09-24T16:31:06.050077Z",
+     "iopub.status.busy": "2025-09-24T16:31:06.049856Z",
+     "iopub.status.idle": "2025-09-24T16:31:06.124788Z",
+     "shell.execute_reply": "2025-09-24T16:31:06.124198Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea36ad81",
+   "id": "ef99e951",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "838f7829",
+   "id": "1645bec5",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ba7377e0",
+   "id": "52b90487",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T12:27:41.607350Z",
-     "iopub.status.busy": "2025-09-24T12:27:41.607152Z",
-     "iopub.status.idle": "2025-09-24T12:27:41.638370Z",
-     "shell.execute_reply": "2025-09-24T12:27:41.637767Z"
+     "iopub.execute_input": "2025-09-24T16:31:06.126673Z",
+     "iopub.status.busy": "2025-09-24T16:31:06.126476Z",
+     "iopub.status.idle": "2025-09-24T16:31:06.157475Z",
+     "shell.execute_reply": "2025-09-24T16:31:06.156944Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffd2e5e5",
+   "id": "255777bb",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fb86a7b",
+   "id": "88e7b9d2",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91d54fc8",
+   "id": "361e529b",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64c5cd67",
+   "id": "ef32cada",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9ec844c",
+   "id": "09069f4b",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c6231c0f",
+   "id": "30e420d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T12:27:41.640584Z",
-     "iopub.status.busy": "2025-09-24T12:27:41.640364Z",
-     "iopub.status.idle": "2025-09-24T12:27:41.644840Z",
-     "shell.execute_reply": "2025-09-24T12:27:41.644321Z"
+     "iopub.execute_input": "2025-09-24T16:31:06.159434Z",
+     "iopub.status.busy": "2025-09-24T16:31:06.159246Z",
+     "iopub.status.idle": "2025-09-24T16:31:06.163566Z",
+     "shell.execute_reply": "2025-09-24T16:31:06.162957Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b22a21f",
+   "id": "1e22fa22",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b0b0a3ab",
+   "id": "6e73cbf7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T12:27:41.646666Z",
-     "iopub.status.busy": "2025-09-24T12:27:41.646475Z",
-     "iopub.status.idle": "2025-09-24T12:27:41.649568Z",
-     "shell.execute_reply": "2025-09-24T12:27:41.648891Z"
+     "iopub.execute_input": "2025-09-24T16:31:06.165484Z",
+     "iopub.status.busy": "2025-09-24T16:31:06.165244Z",
+     "iopub.status.idle": "2025-09-24T16:31:06.168349Z",
+     "shell.execute_reply": "2025-09-24T16:31:06.167667Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fc3faea",
+   "id": "5391eba2",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8655382b",
+   "id": "6b6888cd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T12:27:41.651260Z",
-     "iopub.status.busy": "2025-09-24T12:27:41.651090Z",
-     "iopub.status.idle": "2025-09-24T12:27:44.344418Z",
-     "shell.execute_reply": "2025-09-24T12:27:44.343855Z"
+     "iopub.execute_input": "2025-09-24T16:31:06.170094Z",
+     "iopub.status.busy": "2025-09-24T16:31:06.169919Z",
+     "iopub.status.idle": "2025-09-24T16:31:08.876218Z",
+     "shell.execute_reply": "2025-09-24T16:31:08.875535Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3edc488",
+   "id": "24220060",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19ea137e",
+   "id": "c88c9f14",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fe5a4e6",
+   "id": "fe0b38c3",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d33913ae",
+   "id": "8f7e5e63",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7df61b48",
+   "id": "6ca6aa24",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T12:27:44.346484Z",
-     "iopub.status.busy": "2025-09-24T12:27:44.346291Z",
-     "iopub.status.idle": "2025-09-24T12:27:44.349853Z",
-     "shell.execute_reply": "2025-09-24T12:27:44.349348Z"
+     "iopub.execute_input": "2025-09-24T16:31:08.878279Z",
+     "iopub.status.busy": "2025-09-24T16:31:08.878078Z",
+     "iopub.status.idle": "2025-09-24T16:31:08.881846Z",
+     "shell.execute_reply": "2025-09-24T16:31:08.881144Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fc6eb056980>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f1139ccf600>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46fd59e9",
+   "id": "5d486c42",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7017c04",
+   "id": "37fc4354",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b85635c2",
+   "id": "0d90c643",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b0a7b2d",
+   "id": "1c9e0483",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c4df7ebb",
+   "id": "816dc089",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T12:27:44.351672Z",
-     "iopub.status.busy": "2025-09-24T12:27:44.351447Z",
-     "iopub.status.idle": "2025-09-24T12:27:44.354657Z",
-     "shell.execute_reply": "2025-09-24T12:27:44.353989Z"
+     "iopub.execute_input": "2025-09-24T16:31:08.883649Z",
+     "iopub.status.busy": "2025-09-24T16:31:08.883463Z",
+     "iopub.status.idle": "2025-09-24T16:31:08.886636Z",
+     "shell.execute_reply": "2025-09-24T16:31:08.885994Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "05a4601e",
+   "id": "0b4dd688",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-24T12:27:44.356475Z",
-     "iopub.status.busy": "2025-09-24T12:27:44.356288Z",
-     "iopub.status.idle": "2025-09-24T12:27:45.436418Z",
-     "shell.execute_reply": "2025-09-24T12:27:45.435873Z"
+     "iopub.execute_input": "2025-09-24T16:31:08.888317Z",
+     "iopub.status.busy": "2025-09-24T16:31:08.888129Z",
+     "iopub.status.idle": "2025-09-24T16:31:09.997456Z",
+     "shell.execute_reply": "2025-09-24T16:31:09.996896Z"
     }
    },
    "outputs": [
